# multilabel_image_classifier_web

./: .env.example  .gitignore  LICENSE  README.md  print_tree.py  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: model.py  predictions.py  router.py
backend/app/schemas/: model_info.py  prediction.py
backend/app/services/: image_validation.py  model_service.py  prediction_service.py
backend/tests/: test_backend_health.py
checkpoints/exported/: metadata.json
configs/: voc20.yaml  voc8_legacy.yaml
docs/: architecture.md  dataset-format.md  frontend.md  inference-api.md  training.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/api/: client.ts  predictions.ts
frontend/src/components/: ConfidenceBars.tsx  ModelInfoPanel.tsx  PredictionResults.tsx  UploadDropzone.tsx
frontend/src/pages/: HomePage.tsx
frontend/src/styles/: globals.css
frontend/src/types/: prediction.ts
frontend/src/utils/: labels.ts
notebooks/: README.md  colab_training_launcher.ipynb
scripts/: evaluate.py  export_model.py  inspect_dataset.py  predict.py  prepare_voc2012.py  train.py
src/multilabel_classifier/: __init__.py  config.py  constants.py
src/multilabel_classifier/data/: __init__.py  datamodule.py  dataset.py  transforms.py  validation.py
src/multilabel_classifier/evaluation/: metrics.py  reports.py
src/multilabel_classifier/inference/: artifact.py  predictor.py  preprocessing.py
tests/: test_constants.py  test_data_import.py  test_thresholds.py
(+9 files in other folders)
